--- a/README
+++ b/README
@@ -5,3 +5,18 @@ Para ejecutar Server de APIS SWAGGER:
 
     2. Ejecuta la aplicación con:
     python Flask.py
+
+ Para ejecutar los extractores:
+
+    1. Ejecuta la aplicación con:
+    python main.py  -tipo-
+   
+    tipos disponibles: csv, xml, json
+
+
+ Para abrir la Base de Datos:
+
+    1. Ejecutar MySQLWorkBench:
+        Datos de prueba utilizados: usuario='root', contrasena='123456', host='127.0.0.1', puerto=3306, db_name='IEI'
+
+    2. Drop iei si existe para limpiar el sistema y cargar una nueva BD con main.py
