--- a/README
+++ b/README
@@ -20,3 +20,8 @@ Para ejecutar Server de APIS SWAGGER:
         Datos de prueba utilizados: usuario='root', contrasena='123456', host='127.0.0.1', puerto=3306, db_name='IEI'
 
     2. Drop iei si existe para limpiar el sistema y cargar una nueva BD con main.py
+
+
+Habilitar o deshabiliar que se imprima por consola la creacion y subida de datos a la BD:
+
+   Cambiar los echo=True/False de SQL>BDConnection
